# spring25_taxi

./: .gitignore  pyproject.toml
.github/workflows/: feature_pipeline.yml
notebooks/: 01_fetch_data.ipynb  05_transform_rawdata_to_feature_and_targets.ipynb  06_visualization.ipynb  07_baseline_models.ipynb  08_xgboost_model.ipynb  09_lightgbm_model.ipynb  10_lgm_with_fe.ipynb  11_lgm_hyper.ipynb  12_load_features_hopsworks.ipynb  13_feature_pipeline.ipynb
src/: data_utils.py  experiment_utils.py  plot_utils.py
